--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>HTML & CSS</span> <span class="pull-right">50%</span>
+                    <span>HTML & CSS</span> <span class="pull-right">70%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>Photoshop</span> <span class="pull-right">80%</span>
                     <div class="progress">
@@ -126,16 +126,21 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Hi, my name is yeil and I'm a graduate from Vancouver Career College. 
+                      Hi, my name is Yeil and I am a graduate student from Vancouver Career College. 
                     </p>
                     <p class="lead">
-                   I was born in korea and moved to canada in 2006. I found a passion and love in art at a very young age and 
-                   decided that I wanted to do something creative for a career. It took me awhile to figure out what I really enjoy and Graphic design 
-                   was the path for me.  
+                   I was born in Korea and moved to Canada in 2006. 
+                   I found passion in expressing myself through art at a very young age such as,
+                   illustrating character animations, photo editing, creating logos and pamphlets.
+                   Through all the arts that I do, I love to tell stories and portray meaning behind it.
+                   I love helping the community through expressing my joy through the form of art.
 
                     </p>
                     <p class="lead">
-                    I love to draw, take photography and design graphics for my church.
+                      I am very passionate about my work. I genuinely love what I do. 
+                      I always look for an opportunity that comes in the way and I thrive to challenge and set a goal for myself.
+                      I taught myself how to use adobe software to improve the quality of photos and graphics for my church. 
+                      I soon became the go-to person for any design needs.
                     </p>
                   </div>
                 </div>
