--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
                    I was born in Korea and moved to Canada in 2006. 
                    I found passion in expressing myself through art at a very young age such as,
                    illustrating character animations, photo editing, creating logos and pamphlets.
-                   Through all the arts that I do, I love to tell stories and portray meaning behind it.
-                   I love helping the community through expressing my joy through the form of art.
+                   Through all the designs that I do, I love to tell stories and portray meaning behind it.
+                   I love helping the community through expressing my joy from the work of my art.
 
                     </p>
                     <p class="lead">
                       I am very passionate about my work. I genuinely love what I do. 
-                      I always look for an opportunity that comes in the way and I thrive to challenge and set a goal for myself.
+                      I always look for an opportunity that comes in the way and I thrive to challenge and set goals for myself.
                       I taught myself how to use adobe software to improve the quality of photos and graphics for my church. 
                       I soon became the go-to person for any design needs.
                     </p>
