--- a/index.html
+++ b/index.html
@@ -129,18 +129,22 @@
                       Hi, my name is Yeil and I am a graduate student from Vancouver Career College. 
                     </p>
                     <p class="lead">
-                   I was born in Korea and moved to Canada in 2006. 
-                   I found passion in expressing myself through art at a very young age such as,
-                   illustrating character animations, photo editing, creating logos and pamphlets.
-                   Through all the designs that I do, I love to tell stories and portray meaning behind it.
-                   I love helping the community through expressing my joy from the work of my art.
 
+                   I find passion in expressing myself through art such as,
+                   illustrating character animations, photo editing, creating logos and pamphlets.
+                   Through all the arts that I do, 
+                   I love expressing my form of art through various arts and designs I create.
+                   
                     </p>
                     <p class="lead">
                       I am very passionate about my work. I genuinely love what I do. 
                       I always look for an opportunity that comes in the way and I thrive to challenge and set goals for myself.
                       I taught myself how to use adobe software to improve the quality of photos and graphics for my church. 
                       I soon became the go-to person for any design needs.
+                    </p>
+                    <p class="lead">
+                      Through the knowledge in graphic design, I am able to leverage my creative skills with an astounding photo
+                      editing skills and now I spend most days creating websites and editing and publishing photos on social media platform.
                     </p>
                   </div>
                 </div>
