--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/Hokkaido.pdf"  target="_blank"> <data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/Hokkaido.pdf"  target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/Hokkaidopic.jpg" alt="" class="img-fluid">
                 </div>
