--- a/index.html
+++ b/index.html
@@ -530,15 +530,15 @@
           <div class="col-md-4">
             <div class="card card-blog">
               <div class="card-img">
-                <a href="blog-"><img src="./assets/img/COVER LETTER.jpg" alt="" class="img-fluid"></a>
+                <a href="././assets/img/cover letter 1.pdf"><img src="./assets/img/COVER LETTER.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="card-body">
                 <div class="card-category-box">
                   <div class="card-category">
-                    <a href="././assets/img/cover letter copy.pdf"><h6 class="category">cover letter</h6></a>
+                    <a href="././assets/img/cover letter 1.pdf"><h6 class="category">cover letter</h6></a>
                   </div>
                 </div>
-                <center><h3 class="card-title"><a href="././assets/img/cover letter copy.pdf">Cover Letter PDF</a></h3></center>
+                <center><h3 class="card-title"><a href="././assets/img/cover letter 1.pdf">Cover Letter PDF</a></h3></center>
                 <p class="card-description">
                   
                 </p>
