hokkaido pic change

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="work-box">
               <a href="./assets/img/Hokkaido.pdf"  target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/Hokkaidopic.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/Hokkaido.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
