--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="work-box">
               <a href="./assets/img/FINAL PROJECT (INDESIGN).pdf">
                 <div class="work-img">
-                  <img src="./assets/img/brocheure.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/tokyopic.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
