--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
             <div class="work-box">
               <a href="./assets/img/Business Card.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/Business Card.jpg" alt="./assets/img/business card - back.pdf" class="img-fluid">
+                  <img src="./assets/img/SHIN CARD.jpg" alt="./assets/img/business card - back.pdf" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
