--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Post Card</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">Oct 2021</span>
+                      <span class="w-ctegory">Photoshop</span> / <span class="w-date">Oct 2021</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -363,7 +363,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Itinerary</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Illustrator</span> / <span class="w-date">Jun 2022</span>
+                      <span class="w-ctegory">Indesign</span> / <span class="w-date">Jun 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
