--- a/index.html
+++ b/index.html
@@ -104,18 +104,21 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Illustrator</span> <span class="pull-right">80%</span>
+                    <span>Illustrator</span> <span class="pull-right">90%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Indesign</span> <span class="pull-right">80%</span>
+                    <span>Indesign</span> <span class="pull-right">85%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>AfterEffects & ProCreate</span> <span class="pull-right">70%</span>
+                    <span>AfterEffects & ProCreate</span> <span class="pull-right">80%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
+                    <span>Microsoft office</span> <span class="pull-right">90%</span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -129,7 +132,7 @@
                       Hi, my name is Yeil and I am a graduate student from Vancouver Career College. 
                     </p>
                     <p class="lead">
-
+                  
                    I find passion in expressing myself through art such as,
                    illustrating character animations, photo editing, creating logos and pamphlets.
                    Through all the arts that I do, 
