--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </p>
                     <p class="lead">
                       Through the knowledge in graphic design, I am able to leverage my creative skills with an astounding photo
-                      editing skills and now I spend most days creating websites and editing and publishing photos on social media platform.
+                      editing skills and now I spend most days creating websites, editing, and publishing photos on social media platform.
                     </p>
                   </div>
                 </div>
