color/minor updates

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/final project html/index.html" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
+<a href="./assets/img/final project html/index.html" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/SHIN STUDIOS WHITE.jpg" alt="./assets/img/index.html" class="img-fluid">
                 </div>
@@ -291,7 +291,8 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Website</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">May 2022</span>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date"></a>
+                      </span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -316,7 +317,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Growing</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Photography</span> / <span class="w-date">20 Jul. 2022</span>
+                      <span class="w-ctegory">Photography</span> / <span class="w-date">Jul 2022</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
