--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <p class="lead"
 
                       I am very passionate about my work. I genuinely love what I do. 
-                      I always look for an opportunity that comes in the way and I thrive to challenge and set goals for myself.
+                      I always look for an opportunity that comes in the way. I thrive to challenge and set goals for myself.
                   
                   </P>
                   
