--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Website</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date"></a>
+                      <span class="w-ctegory">Web Design</span> / <span class="w-date">Jun 2022</a>
                       </span>
                     </div>
                   </div>
