--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <div class="work-box">
               <a href="./assets/img/final project illustrator  copy.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/final project illustrator  copy.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/WINTER.pdf" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -349,7 +349,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/final project illustrator  copy.pdf"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/WINTER.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
