--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/final project illustrator  copy.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/WINTER.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
                   <img src="./assets/img/WINTER.pdf" alt="" class="img-fluid">
                 </div>
