--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                         <p><span class="title-s">Email: </span> <span>shinbowl99@hotmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(604)-780-3761</span></p>
                         <p><span class="title-s">Status: </span> <span>Canadian Citizen</span></p>
+                        <p><span class="title-s">Proficient: </span> <span>Microsoft Office</span></p>
                       </div>
                     </div>
                   </div>
