--- a/index.html
+++ b/index.html
@@ -385,9 +385,9 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/Brand guidebook.pdf" target="_blank">
+              <a href="./assets/img/ua.pdf" target="_blank">
                 <div class="work-img">
-                  <img src="./assets/img/Brand guidebook.jpg" alt="" class="img-fluid">
+                  <img src="./assets/img/ua title.jpg" alt="" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -400,7 +400,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/Brand guidebook.pdf" target="_blank"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/ua.pdf" target="_blank"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                 </div>
