--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                     <div class="socials">
                       <ul>
  
-                        <li><a href="https://www.instagram.com/shinbowl_noodle/"><span class="ico-circle"><i class="bi bi-instagram" style="position:relative;top:5px;"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/shinstudio_designs/"><span class="ico-circle"><i class="bi bi-instagram" style="position:relative;top:5px;"></i></span></a></li>
                         
                         <li><a href="https://www.linkedin.com/in/yeil-shin-70a293229/"><span class="ico-circle"><i class="bi bi-linkedin" style="position:relative;top:5px;"></i></span></a></li>
                       </ul>
