business card change

--- a/index.html
+++ b/index.html
@@ -460,9 +460,9 @@
 
           <div class="col-md-4">
             <div class="work-box">
-              <a href="./assets/img/Business Card.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
+              <a href="./assets/img/BUSINESS CARD SHIN STUDIOS.pdf" target="_blank" data-gallery="portfolioGallery" class="portfolio-lightbox">
                 <div class="work-img">
-                  <img src="./assets/img/SHIN CARD.jpg" alt="./assets/img/business card - back.pdf" class="img-fluid">
+                  <img src="./assets/img/shin business card_1.jpg" alt="./assets/img/business card - back.pdf" class="img-fluid">
                 </div>
               </a>
               <div class="work-content">
@@ -475,7 +475,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="./assets/img/Business Card.pdf"> <span class="bi bi-plus-circle"></span></a>
+                      <a href="./assets/img/BUSINESS CARD SHIN STUDIOS.pdf"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
                   
